[fix] dark mode background color

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,11 @@
 .searchpage {
   height: 100vh;
+  background-color: #f8f8ff;
+}
+@media (prefers-color-scheme: dark) {
+  .searchpage {
+    background-color: #696969;
+  }
 }
 
 .searchbox {
