--- a/styles/Infopage.module.css
+++ b/styles/Infopage.module.css
@@ -1,3 +1,12 @@
+.pagebody {
+    height: 100vh;
+}
+@media (prefers-color-scheme: dark) {
+    .pagebody {
+      background-color: #696969;
+    }
+}
+
 .infosearch {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -7,4 +16,5 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: left;
+    background-color: transparent;
 }
